# Custom_DT

./: .coveragerc  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  transformer_sizing.ipynb
.github/workflows/: ci.yml
apptainer/: leela_train.def  start.sh
data/: README.md
demo/: leela_colab_training.ipynb
logging/: README.md
model/: configuration_decision_transformer.py  modeling_decision_transformer.py
models/decision_transformer/: __init__.py
models/lookahead/: __init__.py
models/register/: __init__.py
scripts/: game_data_conversion.py
src/eval/: completion.py  completion_tests.py  matchmaking.py  metric_completion.py  model_completion.py
src/eval/play/: __init__.py  game.py  inference.py  player.py
src/metric/: stockfish.py
src/models/: __init__.py
src/models/decision_transformer/: configuration_decision_transformer.py  modeling_decision_transformer.py
src/train/: leela.py  temp.py  vanilla_RL.py  window_autoreg.py
src/train_rl/: train_rl.py
src/train_rl/utils/: rl_trainer_config.py  rl_trainers.py  sample_eval_printout.txt  vanilla-RL-trainer.py
src/utils/: completion_tests.py  dataset.py  leela_constants.py  leela_encodings.py  trainer.py  translate.py  vanilla-RL-trainer.py
tests/: __init__.py  conftest.py
tests/config_tests/: test_loading.py
tests/integration/: conftest.py
tests/integration/assets/: test_stockfish_10.jsonl
tests/integration/metric/: test_stockfish_eval.py
tests/utils/: conftest.py  test_translate.py
train/: translate.py
weights/: README.md
(+6 files in other folders)
